--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 	<script type="text/javascript">
 		var feedURL = 'http://www.blogger.com/feeds/6937616696067509797/posts/default?start-index=1';
+		//var feedURL = 'http://www.engadget.com/rss.xml';
 	</script>
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript" src="scripts/utils.js"></script>
@@ -18,7 +19,7 @@
 			font-family: sans-serif;
 			font-size: 13px;	
 		}
-		.title {
+		.title a {
 			font-style: italic;
 			font-family: Didot;
 			color: #999;
