--- a/index.html
+++ b/index.html
@@ -19,22 +19,48 @@
 			font-family: sans-serif;
 			font-size: 13px;	
 		}
-		.title a {
+		a .headline-txt, .headline {
 			font-style: italic;
 			font-family: Didot;
-			color: #999;
-			font-size: 24px;
+			color: #585858;
+			font-size: 20px;
 			font-weight: 600;
+			text-decoration: none;
 		}
 		.date {
 			color: #cccccc;
 			font-size: 11px;
+			font-family: sans-serif;
 		}
+		ul {
+			list-style: none;
+		}
+		#post_list li {
+			position: relative;
+			width: 300px;
+			margin: 0 auto;
+			padding: .75em 0;
+			overflow: hidden;
+			border-bottom: 1px solid #EEE;
+			font-size: 100%;
+			line-height: 1.4;
+		}
+		#post_list li .thumb {
+			float: left;
+			margin: 3px 13px 3px 0;
+			display: block;
+		}
+		#post_list li .text {
+			padding-left: 93px;
+		}
+		
 	</style>
 </head>
 <body>
 	<div id="feedWrapper">
-		
+		<ul id="post_list">
+
+		</ul>
 	</div>
 </body>
 </html>
