--- a/index.html
+++ b/index.html
@@ -10,57 +10,13 @@
 	</script>
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript" src="scripts/utils.js"></script>
-	<style type="text/css">
-		p {
-			font-family: sans-serif;
-			font-size: 13px;
-		}
-		.feedContent {
-			font-family: sans-serif;
-			font-size: 13px;	
-		}
-		a .headline-txt, .headline {
-			font-style: italic;
-			font-family: Didot;
-			color: #585858;
-			font-size: 20px;
-			font-weight: 600;
-			text-decoration: none;
-		}
-		.date {
-			color: #cccccc;
-			font-size: 11px;
-			font-family: sans-serif;
-		}
-		ul {
-			list-style: none;
-		}
-		#post_list li {
-			position: relative;
-			width: 300px;
-			margin: 0 auto;
-			padding: .75em 0;
-			overflow: hidden;
-			border-bottom: 1px solid #EEE;
-			font-size: 100%;
-			line-height: 1.4;
-		}
-		#post_list li .thumb {
-			float: left;
-			margin: 3px 13px 3px 0;
-			display: block;
-		}
-		#post_list li .text {
-			padding-left: 93px;
-		}
-		
-	</style>
+	<link rel="stylesheet" href="styles/gng.css">
 </head>
 <body>
-	<div id="feedWrapper">
-		<ul id="post_list">
+		<div id="feedWrapper">
+			<ul id="post_list">
 
-		</ul>
-	</div>
+			</ul>
+		</div>
 </body>
 </html>
