--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Gossip and Glamour</title>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-	<script type="text/javascript">
-		var feedURL = 'http://www.blogger.com/feeds/6937616696067509797/posts/default?start-index=1';
-		//var feedURL = 'http://www.engadget.com/rss.xml';
-	</script>
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript" src="scripts/utils.js"></script>
 	<link rel="stylesheet" href="styles/gng.css">
 </head>
 <body>
-		<div id="feedWrapper">
-			<ul id="post_list">
-
-			</ul>
-		</div>
+	<div id="feedWrapper">
+		<ul id="post_list"></ul>
+	</div>
 </body>
 </html>
