--- a/ggHTML.html
+++ b/ggHTML.html
@@ -56,6 +56,9 @@
 			<div class="bottomInfo">
 				<div style="float:left;">
 					<h2>SYDNEY LOVES FASHION</h2>
+					<div id="feedWrapper">
+						<ul id="post_list"></ul>
+					</div>
 				</div>
 				<div style="float:left;">
 					<h2>TWITTER</h2>
