--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 				</div>
 				<h2>AFFLIATED PAGES</h2>
 				<p id="affiliates">
-					<a href="">Sydney Loves Fashion</a><br/>
-					<a href="">Seattle Boutique Blogspot</a>
+					<a href="http://www.sydneylovesfashion.com/">Sydney Loves Fashion</a><br/>
+					<a href="http://www.seattleboutiqueblogspot.com/">Seattle Boutique Blogspot</a>
 				</p>
 				<h2>OTHER FASHION SITES</h2>
 			</div>
@@ -122,48 +122,5 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript">
-		jQuery(document).ready(function() {
-			getBlogRolls();
-			var myFeed = new FeedPuller('sydlovesfashion');
-		});
-
-		$('#servicesNavItem').bind('mouseenter', function() {
-			$('#servicesFloat').animate({'top': '475px'}, 300);
-			$('#servicesDetail').show(300);
-		});
-		$('#servicesNavItem').bind('mouseleave', function() {
-			$('#servicesFloat').animate({'top': '535px'}, 300);
-			$('#servicesDetail').hide(300);
-		});
-
-		$('#blogNavItem').bind('mouseenter', function() {
-			$('#blogFloat').animate({'top': '285px'}, 300);
-			$('#blogDetail').show(300);
-		});
-		$('#blogNavItem').bind('mouseleave', function() {
-			$('#blogFloat').animate({'top': '345px'}, 300);
-			$('#blogDetail').hide(300);
-		});
-
-		$('#contactNavItem').bind('mouseenter', function() {
-			$('#contactFloat').animate({'top': '670px'}, 300);
-			$('#contactDetail').show(300);
-		});
-		$('#contactNavItem').bind('mouseleave', function() {
-			$('#contactFloat').animate({'top': '730px'}, 300);
-			$('#contactDetail').hide(300);
-		});
-
-		$('#aboutNavItem').bind('mouseenter', function() {
-			$('#aboutFloat').animate({'top': '670px'}, 300);
-			$('#aboutDetail').show(300);
-		});
-		$('#aboutNavItem').bind('mouseleave', function() {
-			$('#aboutFloat').animate({'top': '730px'}, 300);
-			$('#aboutDetail').hide(300);
-		});
-
-	</script>
 </body>
 </html>
