--- a/index.html
+++ b/index.html
@@ -122,5 +122,8 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" charset="utf-8">
+		pageFlag = 'home';
+	</script>
 </body>
 </html>
