--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
 <body>
 		<div id="main">
 		<div class="header">
-			<img id="tpBanner" src="" />
+			<img id="tpBanner" src="" onload="$('#logo').show();"/>
 			<!-- this will be a rotating image -->
-			<img src="images/logo.png" style="position:absolute;top:20px;left:20px;"/>
+			<img src="images/logo.png" id="logo" style="position:absolute;top:20px;left:20px;display: none;" />
 		</div>
 		<div class="wrapper">
 			<div class="nav">
