--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 		<div id="main">
 		<div class="header">
-			<img id="tpBanner" src="" />
+			<img id="tpBanner" src="" onload="$('#logo').show();"/>
 			<!-- this will be a rotating image -->
-			<img src="images/logo.png" style="position:absolute;top:20px;left:20px;"/>
+			<img src="images/logo.png" id="logo" style="position:absolute;top:20px;left:20px;display: none;" />
 		</div>
 		<div class="wrapper">
 			<div class="nav">
@@ -34,7 +34,7 @@
 			<div class="mainNav">
 				<div style="float:left; width: 285px;">
 					<div id="servicesNavItem">
-						<a href="services.html"><img src=""height="360" width="280" alt="" ></a>
+						<a href="services.html"><img src="images/services.jpg" height="360" width="280" alt="" ></a>
 						<div id="servicesFloat" class="floatTxt" style="left: 40px; top: 535px;">
 							Services<p id="servicesDetail" style="display:none;">A firm created exclusively<br/>for fashion industry clients</p>
 						</div>
