--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript" src="scripts/utils.js"></script>
 	<link rel="stylesheet" href="styles/gng.css">
+	<link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
 <body>
 		<div id="main">
