--- a/index.html
+++ b/index.html
@@ -10,116 +10,117 @@
 	<link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
 <body>
-		<div id="main">
-		<div class="header">
-			<img id="tpBanner" src="" onload="$('#logo').show();"/>
-			<!-- this will be a rotating image -->
-			<img src="images/logo.png" id="logo" style="position:absolute;top:20px;left:20px;display: none;" />
+		<div style="width: 100%;background-color: #000;">
+			<div class="header">
+				<img id="tpBanner" src="" onload="$('#logo').show();"/>
+				<!-- this will be a rotating image -->
+				<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
+			</div>
 		</div>
-		<div class="wrapper">
-			<div class="nav">
-				<ul>
-					<li class="selectedNav">HOME</li>
-					<li> / </li>
-					<li> <a href="services.html">SERVICES</a></li>
-					<li> / </li>
-					<li> <a href="about.html">ABOUT</a></li>
-					<li> / </li>
-					<li> <a href="contact.html">CONTACT</a></li>
-					<li> / </li>
-					<li> <a href="blog.html">BLOG</a></li>
-				</ul>
-				<ul style="margin-top: -4px;">
-				</ul>
-			</div>
-			<div class="mainNav">
-				<div style="float:left; width: 285px;">
-					<div id="servicesNavItem">
-						<a href="services.html"><img src="images/services.jpg" height="360" width="280" alt="" ></a>
-						<div id="servicesFloat" class="floatTxt" style="left: 40px; top: 535px;">
-							Services<p id="servicesDetail" style="display:none;">A firm created exclusively<br/>for fashion industry clients</p>
+		<div id="main">
+		<div style="width: 1024px;">
+			<div class="wrapper">
+				<div class="nav">
+					<ul>
+						<li class="selectedNav">HOME</li>
+						<li> / </li>
+						<li> <a href="services.html">SERVICES</a></li>
+						<li> / </li>
+						<li> <a href="about.html">ABOUT</a></li>
+						<li> / </li>
+						<li> <a href="contact.html">CONTACT</a></li>
+						<li> / </li>
+						<li> <a href="blog.html">BLOG</a></li>
+					</ul>
+					<ul style="margin-top: -4px;">
+					</ul>
+				</div>
+				<div class="mainNav">
+					<div style="float:left; width: 285px;">
+						<div id="servicesNavItem">
+							<a href="services.html"><img src="images/services.jpg" height="360" width="280" alt="" ></a>
+							<div id="servicesFloat" class="floatTxt" style="left: 40px; top: 535px;">
+								Services<p id="servicesDetail" style="display:none;">A firm created exclusively<br/>for fashion industry clients</p>
+							</div>
+						</div>
+						<div id="contactNavItem">
+							<a href="contact.html"><img src="images/contact.jpg" height="170" width="280" alt=""></a>
+							<div id="contactFloat" class="floatTxt" style="left: 40px; top: 730px;">
+								Contact<p id="contactDetail" style="display:none;">Here is some text<br/>and some more text</p>
+							</div>
 						</div>
 					</div>
-					<div id="contactNavItem">
-						<a href="contact.html"><img src="images/contact.jpg" height="170" width="280" alt=""></a>
-						<div id="contactFloat" class="floatTxt" style="left: 40px; top: 730px;">
-							Contact<p id="contactDetail" style="display:none;">Here is some text<br/>and some more text</p>
+					<div style="float:right; width: 285px;">
+						<div id="blogNavItem">
+							<a href="blog.html"><img src="images/blog.jpg" height="170" width="280" alt=""></a>
+							<div id="blogFloat" class="floatTxt" style="left: 357px; top: 345px;">
+								Blog<p id="blogDetail" style="display:none;">Here is some text<br/>Here is some text</p>
+							</div>
+						</div>
+						<div id="aboutNavItem">
+							<a href="about.html"><img src="images/about.jpg" height="360" width="280" alt="" id="aboutNavItem"></a>
+							<div id="aboutFloat" class="floatTxt" style="left: 357px; top: 730px;">
+								About<p id="aboutDetail" style="display:none;">Blurb goes here<br/>and also here</p>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div style="float:right; width: 285px;">
-					<div id="blogNavItem">
-						<a href="blog.html"><img src="images/blog.jpg" height="170" width="280" alt=""></a>
-						<div id="blogFloat" class="floatTxt" style="left: 357px; top: 345px;">
-							Blog<p id="blogDetail" style="display:none;">Here is some text<br/>Here is some text</p>
+				<div class="welcome">
+					<h1>WELCOME</h1>
+					<p>
+						Welcome to Gossip &amp; Glamour Marketing 
+								and Public Relations, a firm created 
+								exclusively for fashion industry clients. 
+								We offer a wide variety of services that 
+								cater to every segment of the fashion 
+								world including retail, wholesale 
+								and manufacturing. Gossip &amp; Glamour is 
+								committed to creating long-term partner-
+								ships with clients by striving to be a viable 
+								fashion resource for companies of any size. 
+								Think of us as your "secret weapon" 
+								armed with the experience you need to 
+								successfully navigate the fashion industry 
+								with style and grace.
+					</p>
+					<h2>CONNECT</h2>
+					<div style="padding-left: 65px;">
+						<img class="socialLink" src="images/fbIcon.png" />
+						<img class="socialLink" src="images/twitterIcon.png" />
+						<img class="socialLink" src="images/linkinIcon.png" />
+						<img class="socialLink" src="images/icons.png" />
+					</div>
+					<h2>AFFLIATED PAGES</h2>
+					<p id="affiliates">
+						<a href="http://www.sydneylovesfashion.com/">Sydney Loves Fashion</a><br/>
+						<a href="http://www.seattleboutiqueblogspot.com/">Seattle Boutique Blogspot</a>
+					</p>
+					<h2>OTHER FASHION SITES</h2>
+				</div>
+				<div class="bottomInfo">
+					<div style="float:left;">
+						<h2>SYDNEY LOVES FASHION</h2>
+						<div id="feedWrapper">
+							<ul id="post_list"></ul>
 						</div>
 					</div>
-					<div id="aboutNavItem">
-						<a href="about.html"><img src="images/about.jpg" height="360" width="280" alt="" id="aboutNavItem"></a>
-						<div id="aboutFloat" class="floatTxt" style="left: 357px; top: 730px;">
-							About<p id="aboutDetail" style="display:none;">Blurb goes here<br/>and also here</p>
+					<div style="float:left;">
+						<h2>GOSSIP&GLAMOUR TWITTER</h2>
+						<div id="feedWrapper">
+							<ul id="tweet_list"></ul>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="welcome">
-				<h1>WELCOME</h1>
-				<p>
-					Welcome to Gossip &amp; Glamour Marketing 
-							and Public Relations, a firm created 
-							exclusively for fashion industry clients. 
-							We offer a wide variety of services that 
-							cater to every segment of the fashion 
-							world including retail, wholesale 
-							and manufacturing. Gossip &amp; Glamour is 
-							committed to creating long-term partner-
-							ships with clients by striving to be a viable 
-							fashion resource for companies of any size. 
-							Think of us as your "secret weapon" 
-							armed with the experience you need to 
-							successfully navigate the fashion industry 
-							with style and grace.
-				</p>
-				<!-- <h2>GALLERY</h2>
-				images go here for the gallery, should this be a seperate div
-				<a href="">Find more on Somesite</a> -->
-				<h2>CONNECT</h2>
-				<div style="padding-left: 65px;">
-					<img class="socialLink" src="images/fbIcon.png" />
-					<img class="socialLink" src="images/twitterIcon.png" />
-					<img class="socialLink" src="images/linkinIcon.png" />
-					<img class="socialLink" src="images/icons.png" />
+				<div style="clear:both;"></div>
+				<div class="bottomNav">
+					<ul>
+						<li>HOME /</li>
+						<li> <a href="services.html">SERVICES</a> /</li>
+						<li> <a href="about.html">ABOUT</a> /</li>
+						<li> <a href="contact.html">CONTACT</a> /</li>
+						<li> <a href="blog.html">BLOG</a></li>
+					</ul>
 				</div>
-				<h2>AFFLIATED PAGES</h2>
-				<p id="affiliates">
-					<a href="http://www.sydneylovesfashion.com/">Sydney Loves Fashion</a><br/>
-					<a href="http://www.seattleboutiqueblogspot.com/">Seattle Boutique Blogspot</a>
-				</p>
-				<h2>OTHER FASHION SITES</h2>
-			</div>
-			<div class="bottomInfo">
-				<div style="float:left;">
-					<h2>SYDNEY LOVES FASHION</h2>
-					<div id="feedWrapper">
-						<ul id="post_list"></ul>
-					</div>
-				</div>
-				<div style="float:left;">
-					<h2>GOSSIP&GLAMOUR TWITTER</h2>
-					<div id="feedWrapper">
-						<ul id="tweet_list"></ul>
-					</div>
-				</div>
-			</div>
-			<div style="clear:both;"></div>
-			<div class="bottomNav">
-				<ul>
-					<li>HOME /</li>
-					<li> <a href="services.html">SERVICES</a> /</li>
-					<li> <a href="about.html">ABOUT</a> /</li>
-					<li> <a href="contact.html">CONTACT</a> /</li>
-					<li> <a href="blog.html">BLOG</a></li>
-				</ul>
 			</div>
 		</div>
 	</div>
