--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
 <body>
-		<div style="width: 100%;background-color: #000;">
+		<div style="width: 100%;background-color: #000;margin: 0px;padding:0px;">
 			<div class="header">
 				<img id="tpBanner" src="" onload="$('#logo').show();"/>
 				<!-- this will be a rotating image -->
@@ -39,13 +39,13 @@
 					<div style="float:left; width: 285px;">
 						<div id="servicesNavItem">
 							<a href="services.html"><img src="images/services.jpg" height="360" width="280" alt="" ></a>
-							<div id="servicesFloat" class="floatTxt" style="left: 40px; top: 535px;">
+							<div id="servicesFloat" class="floatTxt" style="left: 40px; top: 355px;">
 								Services<p id="servicesDetail" style="display:none;">A firm created exclusively<br/>for fashion industry clients</p>
 							</div>
 						</div>
 						<div id="contactNavItem">
 							<a href="contact.html"><img src="images/contact.jpg" height="170" width="280" alt=""></a>
-							<div id="contactFloat" class="floatTxt" style="left: 40px; top: 730px;">
+							<div id="contactFloat" class="floatTxt" style="left: 40px; top: 550px;">
 								Contact<p id="contactDetail" style="display:none;">Here is some text<br/>and some more text</p>
 							</div>
 						</div>
@@ -53,13 +53,13 @@
 					<div style="float:right; width: 285px;">
 						<div id="blogNavItem">
 							<a href="blog.html"><img src="images/blog.jpg" height="170" width="280" alt=""></a>
-							<div id="blogFloat" class="floatTxt" style="left: 357px; top: 345px;">
+							<div id="blogFloat" class="floatTxt" style="left: 357px; top: 165px;">
 								Blog<p id="blogDetail" style="display:none;">Here is some text<br/>Here is some text</p>
 							</div>
 						</div>
 						<div id="aboutNavItem">
 							<a href="about.html"><img src="images/about.jpg" height="360" width="280" alt="" id="aboutNavItem"></a>
-							<div id="aboutFloat" class="floatTxt" style="left: 357px; top: 730px;">
+							<div id="aboutFloat" class="floatTxt" style="left: 357px; top: 550px;">
 								About<p id="aboutDetail" style="display:none;">Blurb goes here<br/>and also here</p>
 							</div>
 						</div>
