--- a/services.html
+++ b/services.html
@@ -10,12 +10,15 @@
 	<link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
 <body>
-		<div id="main">
-		<div class="header">
-			<img id="tpBanner" src="" onload="$('#logo').show();"/>
-			<!-- this will be a rotating image -->
-			<img src="images/logo.png" id="logo" style="position:absolute;top:20px;left:20px;display: none;" />
+		<div style="width: 100%;background-color: #000;margin: 0px;padding:0px;">
+			<div class="header">
+				<img id="tpBanner" src="" onload="$('#logo').show();"/>
+				<!-- this will be a rotating image -->
+				<img src="images/logo.png" id="logo" style="position:relative;top:-170px;left:20px;display: none;" />
+			</div>
 		</div>
+		<div id="main">
+		<div style="width: 1024px;">
 		<div class="wrapper">
 			<div class="nav">
 				<ul>
@@ -118,6 +121,7 @@ marketing, and vendor relations.
 					<li> <a href="blog.html">BLOG</a></li>
 				</ul>
 			</div>
+		</div>
 		</div>
 	</div>
 	<script type="text/javascript">
