--- a/about.html
+++ b/about.html
@@ -81,6 +81,10 @@ Twitter @GossipGlamour and LIKE us on Facebook
 				<ul style="margin-top: -36px; padding-top: 15px; padding-bottom: 15px;">
 				</ul>
 				<br/><br/>
+				<span class="copy-txt">
+						&copy; Gossip &amp; Glamour 2012<br/>
+						Site Design by <a style="" href="http://www.achehorn.com/">Achehorn</a>
+					</span>
 			</div>
 		</div>
 		</div>
