--- a/blog.html
+++ b/blog.html
@@ -64,8 +64,8 @@
 						<a href="http://www.standard.co.uk/lifestyle/fashion/">London Evening Standard</a><br/>
 				</p>
 				<h2>GOSSIP&GLAMOUR TWITTER</h2>
-				<div id="feedWrapper" style="position: relative; overflow: hidden;">
-					<ul id="tweet_list" style="position: relative; width: 320px; margin-left: 0px;"></ul>
+				<div id="feedWrapper" style="position: relative; overflow: hidden;height: 500px;">
+					<ul id="tweet_list" style="position: relative; width: 320px; margin-left: 0px; height: 500px;"></ul>
 				</div>
 			</div>
 			
