--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="servicesContent" style="padding-bottom: 15px; border-bottom: 1px solid #EEE;">
 				<div class="profilePic">
-					<div class="floatTxt" id="selected">
+					<div class="floatTxt">
 						<a href="#FM">Fashion Marketing</a>
 					</div>
 					<div class="floatTxt">
