--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</div>
 						</div>
 						<div id="aboutNavItem">
-							<a href="about.html"><img src="images/about.jpg" height="360" width="280" alt="" id="aboutNavItem" border="0"></a>
+							<a href="about.html"><img src="images/about_home.jpg" height="360" width="280" alt="" id="aboutNavItem" border="0"></a>
 							<div id="aboutFloat" class="floatTxt" style="left: 357px; top: 550px;">
 								About<p id="aboutDetail" style="display:none;">Learn more about<br/>Sydney here.</p>
 							</div>
